fixed dark mode switch!!!!!

--- a/src/styles/header.module.scss
+++ b/src/styles/header.module.scss
@@ -11,7 +11,7 @@
 }
 .content {
   position: absolute;
-  top: 35%;
+  top: 25%;
   margin: auto;
   text-align: center;
   width: 100%;
@@ -52,8 +52,8 @@
 }
 img {
   position:relative;
-  max-width: 1.1rem;
-  max-height: 1.1rem;
+  margin-top: 0.2rem;
+  width: 1.1rem;
 }
 .nav-container {
   position: absolute;
