--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -23,6 +23,7 @@
 }
 html {
   width: 100vw;
+  background-color: var(--primary-color);
 }
 h1, h2, label, a, li {
   font-family: 'VT323';
